# sterling-amm-mainnet-7v9-verifiable-build

./: .gitignore  Anchor.toml  Cargo.toml  FINAL_STATUS_2026-04-18.md  LIVE_MATCHTRACE_2026-04-20.md  MATCH_STATUS.md  README.md  SECURITY.md
.github/workflows/: build-verified-artifact.yml
.well-known/: security.txt
programs/sterling_amm/: Cargo.toml
programs/sterling_amm/.cargo/: config.toml
programs/sterling_amm/src/: lib.rs
programs/sterling_amm_mainnet/: Cargo.toml
programs/sterling_amm_mainnet/src/: lib.rs  lib.rs.before_tail_rebuild
scripts/: check_match.sh  init_routing_pool_runtime_mainnet.cjs  upsert_lp_metadata_mainnet.cjs
tokenlist/: tokenlist.json
website/sterlingchain-web/public/: pair-metadata.json  pairs.json  pools.json  proof.json
website/sterlingchain-web/public/token-assets/: sdlp.metadata.json  stm-sjbcusd-g94-lp.metadata.json  stm-sjbcusd.pair.metadata.json
