[workspace]
members = [
  "programs/sterling_amm"
]
resolver = "2"

[workspace.metadata.cli]
solana = "1.18.20"

# ---- FIX: eviter blake3 edition2024 ----
# DISABLED:

[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.5" }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = "symbols"
