[package]
name = "sterling_amm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "sterling_amm"

[features]
custom-panic = []
custom-heap = []
anchor-debug = []
migration-payout = []
migration-claim = []
migration-ledger = []
migration = ["migration-payout", "migration-claim"]
migration-full = ["migration", "migration-ledger"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["no-idl", "no-log-ix-name"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
solana-security-txt = "1.1.1"
anchor-spl = { version = "0.29.0", features = ["token"] }
